--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+div.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .cell {
   display: flex;
   flex-direction: row;
@@ -16,8 +22,8 @@ td {
 }
 
 button {
-  margin: 30px;
-  border-bottom-style: wave;
+  border-style: wave;
+  margin-top: 30px;
   min-width: 100px;
   min-height: 50px;
 }
